# sift-science-rust

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
examples/: decision.rs  get_user_score.rs  label.rs  track.rs  verification.rs  webhooks.rs
src/: client.rs  common.rs  decisions.rs  error.rs  labels.rs  lib.rs  score.rs  verification.rs  webhooks.rs
src/events/: complex_field_types.rs  mod.rs  reserved_events.rs  reserved_fields.rs
