[package]
name = "sift_science"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OutThereLabs/sift-science-rust"
documentation = "https://docs.rs/sift_science"
description = "A rust Sift Science client"

[dependencies]
async-trait = "0.1"
awc = { version = "2.0", optional = true }
futures = "0.3"
reqwest = { version = "0.11", optional = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_with = "1.10"
thiserror = { version = "1.0" }
tracing = "0.1"
urlencoding = "2.1"

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1.11", features=["full"] }
